# trioron-project

./: .gitignore  BRIDGE.md  LICENSE  MANUAL.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_ceilings.py  test_classification.py  test_dreaming.py  test_extend_resume.py  test_frustration.py  test_growth_direction_residuals.py  test_hat.py  test_incubator.py  test_network.py  test_node.py  test_packnet.py  test_profile.py  test_pruner.py  test_translator.py  test_triggers.py  test_trioron_2_0.py  test_trioron_2_0_dendrite.py  test_trioron_2_0_phase_2_5.py  test_trioron_2_0_phase_5.py  trioron_2_0.md  trioron_blueprint.md
docs/: atari_pong_primitives.md  learning_methods.md
examples/: bridge_demo.py  emotional_tts_toy.py
experiments/: bench_2_0_cifar.py  bench_2_0_delta.py  bench_2_0_dendrite.py  bench_2_0_dendrite_real.py  bench_2_0_regime.py  bench_2_0_single_task.py  bench_2_0_smoke.py  bench_50task.py  bench_50task_dreaming_act_seeds.py  bench_50task_dreaming_open_seeds.py  bench_50task_dreaming_seeds.py  bench_50task_dreaming_synaptic_seeds.py  bench_50task_dreaming_synaptic_sweep.py  bench_50task_frustration_seeds.py  bench_50task_hat_extra_seeds.py  bench_50task_hat_seeds.py  bench_50task_online_ewc.py  bench_50task_packnet_seeds.py  bench_50task_seeds.py  bench_archive_n3.py  bench_btm_baseline.py  bench_chained_15task.py  bench_chained_extend.py  bench_forgetting_quick.py  bench_harder.py  bench_hat_chained_15_n10.py  bench_hat_chained_15_n3.py  bench_hippo_k50_n10.py  bench_lwf_chained_15_n10.py  bench_lwf_chained_15_n3.py  bench_manifold_ablation.py  bench_manifold_replay_n10.py  bench_manifold_replay_n3.py  bench_online_ewc_chained_15_n10.py  bench_online_ewc_chained_15_n3.py  bench_packnet.py  bench_packnet_chained_15_n10.py  bench_packnet_chained_15_n3.py  bench_saturation_curve.py  bench_split_mnist.py  (+31 more)
paper/: L0_HANDSHAKE_BRIEF.md  Trioron Paper Draft.docx  intro_review.md  methods.bbl  methods.tex  methods_draft.md  paper.bbl  paper.tex  refs.bib  results.bbl  results.tex  trioron-contrastive-handoff.md
teach/: README.md  engine.js  index.html  main.js  scenes.js  style.css
tour/: README.md  engine.js  index.html  main.js  scenes.js  style.css
trioron/: __init__.py  api.py  ceilings.py  (+16 more)
(+141 files in other folders)
